--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -90,12 +90,12 @@
             </li>
             
             <!-- Development -->            
-            {% if page.url == "/developers.html" %}
+            {% if page.url == "/status.html" %}
             <li class="active nav-item">
             {% else %}
             <li class="nav-item">
             {% endif %}
-              <a href="{{ site.baseurl }}/developers.html" class="nav-link">
+              <a href="{{ site.baseurl }}/status.html" class="nav-link">
                 <i class="material-icons">book</i> Current Status
               </a>
             </li> 
