--- a/site/_layouts/page.html
+++ b/site/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 
 <!-- Header -->
 {% if page.header-image == true %}
-<div class="page-header header-filter clear-filter purple-filter" data-parallax="true" style=" background: rgb(25, 39, 160); height: 500px; background-image: url('{{ site.assets }}/{{ page.header-path }}'); background-position: center; ">
+<div class="page-header header-filter clear-filter purple-filter" data-parallax="true" style=" background: rgb(25, 39, 160); height: 500px; background-image: url('{{ site.baseurl}}/{{ site.assets }}/{{ page.header-path }}'); background-position: center; ">
 {% else %}
 <div class="page-header header-filter" data-parallax="true" style="height: 500px" >
 {% endif %}
