Home, Getting Started and Part of Tests

--- a/site/_layouts/default.html
+++ b/site/_layouts/default.html
@@ -62,21 +62,12 @@
             {% else %}
             <li class="nav-item dropdown">
             {% endif %}
-              <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
+              
+              <a href="{{ site.baseurl }}/getting-started.html" class="nav-link">
                 <i class="material-icons">explore</i> Getting Started
               </a>
-              <div class="ripple-container"></div></a>
-              <div class="dropdown-menu dropdown-with-icons">
-<!--                 <a href="{{ site.baseurl }}/client.html" class="dropdown-item">
-                  <i class="material-icons">explore</i> Getting Started
-                </a>
-                <a href="{{ site.baseurl }}/features.html" class="dropdown-item">
-                  <i class="material-icons">toc</i> Features
-                </a> -->
-                <a href="{{ site.baseurl }}/getting-started.html" class="dropdown-item">
-                  <i class="material-icons">person</i> Personas + Scenarios
-                </a>
-              </div>
+             
+        
             </li>
             
             <!-- The System -->            
