Added Architecture Diagram

--- a/site/_layouts/page.html
+++ b/site/_layouts/page.html
@@ -17,6 +17,9 @@ layout: default
           {% if page.button == true %}
           <a class="btn btn-danger btn-round" href="{{ site.baseurl}}{{ page.button-ref }}" >{{ page.button-description }}</a>    
           {% endif %}
+          {% if page.button2 == true %}
+          <a class="btn btn-danger btn-round" href="{{ site.baseurl}}{{ page.button-ref2 }}" >{{ page.button-description }}</a>    
+          {% endif %}
         </div>
       </div>
     </div>
