Fixed bug on Timesheet button

--- a/site/_layouts/page.html
+++ b/site/_layouts/page.html
@@ -18,7 +18,7 @@ layout: default
           <a class="btn btn-danger btn-round" href="{{ site.baseurl}}{{ page.button-ref }}" >{{ page.button-description }}</a>    
           {% endif %}
           {% if page.button2 == true %}
-          <a class="btn btn-danger btn-round" href="{{ site.baseurl}}{{ page.button-ref2 }}" >{{ page.button-description }}</a>    
+          <a class="btn btn-danger btn-round" href="{{ page.button-ref2 }}" >{{ page.button-description }}</a>    
           {% endif %}
         </div>
       </div>
